Release history for Dist-Zilla-Util-ExpandINI

0.002001 2014-11-08T11:50:57Z 2ff3832
 [API]
 - Can now pass `comments => ` with any of the following values to control comment handling.
 - `all`, all comments are copied.
 - `authordeps`, only comments that look like Dist::Zilla AuthorDeps are copied.
 - `none`, no comments are copied.
 - Thanks to Alan Young ( Harley Pig ) for the contributions.

0.002000 2014-11-08T01:53:39Z da7e0e7
 [API]
 - Now properly instantiable with ->new()
 - Can pass "include_does" and "exclude_does" which take arrays of roles to include/exclude from the results.

 [Dependencies::Stats]
 - Dependencies changed since 0.001003, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +7 ↑2 -1 (recommends: +1, suggests: ↑2)
 - runtime: +2 ↓1 -1
 - test: +2 (recommends: ↑2)

 [Features]
 - Comments are preserved in some way, though they may move around a bit.
 - This is mostly to support transferral of authordeps. ( kentnl/Dist-Zilla-App-Command-bakeini#1 )

 [Metadata]
 - author = kentnl

0.001003 2014-08-15T22:30:33Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - tests augmented.
 - whitespace adjusted.

 [Dependencies::Stats]
 - Dependencies changed since 0.001002, see misc/*.deps* for details
 - configure: ↓1
 - develop: +1 (suggests: ↑1)
 - test: -4 (recommends: ↑1 -2)

 [Misc]
 - Improve source side POD to reduce build side whitespace.

 [Tests]
 - update Test::ReportPrereqs

0.001002 2014-07-23T17:44:44Z
 [00 Trivial]
 - Misc packaging cleanups

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - develop: +1 (suggests: ↑2)
 - test: +2 ↑1 (recommends: +1)

0.001001 2014-06-03T05:43:02Z
 [Bugfix]
 - use a version of Config::INI with is_valid_property_name

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - develop: -1 (suggests: +2 -1)
 - runtime: ↑1

0.001000 2014-06-02T21:24:12Z
 - First version.
