@@ -72,6 +72,8 @@ ATTRIBUTES
 
       ->new( include_does => [ 'Dist::Zilla::Role::VersionProvider', ] );
 
+    ( API Since 0.002000 )
+
   "exclude_does"
     An "ArrayRef" of "Role"s to *exclude* from the emitted "INI".
 
@@ -80,6 +82,11 @@ ATTRIBUTES
     This is the default behavior.
 
       ->new( exclude_does => [ 'Dist::Zilla::Role::Releaser', ] );
+
+    ( API Since 0.002000 )
+
+  "comments"
+    This attribute controls how comments are handled.
 
 COMMENT PRESERVATION
     Comments are ( since "v0.002000" ) arbitrarily supported in a very basic
