@@ -6,7 +6,8 @@ Release history for Dist-Zilla-Util-ExpandINI
  - `all`, all comments are copied.
  - `authordeps`, only comments that look like Dist::Zilla AuthorDeps are copied.
  - `none`, no comments are copied.
- - Thanks to Alan Young ( Harley Pig ) for the contributions.
+ - Default is `all`.
+ - Thanks to Alan Young ( AYOUNG ) for the contributions ( Github #1 ).
 
 0.002000 2014-11-08T01:53:39Z da7e0e7
  [API]
